Changes made from the "0.6.5" release to the "0.7" release:
-----------------------------------------------------------

* Bertrand Coconnier:

- Added extension GLC_QSO_buffer_object to report the use of VBOs and PBOs
  through glcGeti(GLC_BUFFER_OBJECT_COUNT_QSO) and its corresponding call to
  glcGetListi(GLC_BUFFER_OBJECT_LIST_QSO, int).
- GLC_TEXTURE mode now uses Vertex Buffer Objects (VBO) whenever the gfx card
  supports them
- Fixed bug #1834256 (part II) : The configure script now guesses the correct
  flags to use in order to cross-compile QuesoGLC for MinGW32
- Fixed bug #1834256 (part I) : An option has been added to the build scripts
  in order to disable the build of tests and examples 
- Fixed bug #1640256 (RTL scripts were wrongly supported and the fix introduced
  for release 0.6 was actually a partial fix).
- Improved tests coverage (all GLC functions are now tested at least once with
  all its legal attributes)
- Spacing characters have now their own caching system when GLC_GL_OBJECTS is
  enabled.
- Code refactoring between glcRenderString() and glcRenderCountedString() in
  order to maximize common code for easier maintenance.
- Display lists are now called earlier in glcRenderChar() in order to minimize
  useless overhead.

Changes made from the "0.6" release to the "0.6.5" release:
-----------------------------------------------------------

* Bertrand Coconnier:

- Rendering and measuring routines now skip control characters instead of
  having a random behavior about them.
- Fixed bug #1820546 (glcRenderString("") displayed the last rendered string
  minus its first character)
- Fixed bug #1821219 (Blank characters (i.e. spaces) were wrongly transformed
  into null characters)
- Removed the use of FcStrSet and FcStrList objects for the catalog list. Use
  object __GLCarray instead.
- Fixed bug #1814773 (QuesoGLC uses the system library GLEW whenever
  possible. Otherwise a copy of GLEW is automagically built and embedded with
  QuesoGLC)