@@ -467,9 +467,10 @@ void __glcSaveGLState(__GLCglState* inGLState, __GLCcontext* inContext,
     if (GLEW_ARB_pixel_buffer_object && (!inContext->enableState.glObjects))
       glGetIntegerv(GL_PIXEL_UNPACK_BUFFER_BINDING_ARB,
 		    &inGLState->bufferObjectID);
-    if (GLEW_ARB_vertex_buffer_object && inContext->enableState.glObjects)
-      glGetIntegerv(GL_ARRAY_BUFFER_BINDING_ARB, &inGLState->bufferObjectID);
   }
+
+  if (GLEW_ARB_vertex_buffer_object && inContext->enableState.glObjects)
+    glGetIntegerv(GL_ARRAY_BUFFER_BINDING_ARB, &inGLState->bufferObjectID);
 
   if (inAll || inContext->renderState.renderStyle == GLC_LINE ||
        inContext->renderState.renderStyle == GLC_TRIANGLE) {
@@ -492,8 +493,6 @@ void __glcRestoreGLState(__GLCglState* inGLState, __GLCcontext* inContext,
     glBindTexture(GL_TEXTURE_2D, inGLState->textureID);
     if (GLEW_ARB_pixel_buffer_object && !inContext->enableState.glObjects)
       glBindBufferARB(GL_PIXEL_UNPACK_BUFFER_ARB, inGLState->bufferObjectID);
-    if (GLEW_ARB_vertex_buffer_object && inContext->enableState.glObjects)
-      glBindBufferARB(GL_ARRAY_BUFFER_ARB, inGLState->bufferObjectID);
     if (!inGLState->texture2D)
       glDisable(GL_TEXTURE_2D);
     if (!inGLState->blend)
@@ -501,6 +500,9 @@ void __glcRestoreGLState(__GLCglState* inGLState, __GLCcontext* inContext,
     glTexEnvi(GL_TEXTURE_ENV, GL_TEXTURE_ENV_MODE, inGLState->textureEnvMode);
     glBlendFunc(inGLState->blendSrc, inGLState->blendDst);
   }
+
+  if (GLEW_ARB_vertex_buffer_object && inContext->enableState.glObjects)
+    glBindBufferARB(GL_ARRAY_BUFFER_ARB, inGLState->bufferObjectID);
 
   if (inAll || inContext->renderState.renderStyle == GLC_LINE ||
        inContext->renderState.renderStyle == GLC_TRIANGLE) {
